--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
                 <a class="p-2 text-dark" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Home"]</a>
                 <a class="p-2 text-dark" asp-area="" asp-controller="News" asp-action="Index">@Localizer["News"]</a>
             </nav>
+            <a class="p-2 text-dark" asp-area="" asp-controller="Test1" asp-action="Index">Тест</a>
             <a class="btn btn-outline-primary m-1" asp-controller="SignIn" asp-action="Login">@Localizer["Login"]</a>
             <a class="btn   btn-primary m-1" asp-controller="SignUp" asp-action="Register">@Localizer["SignUp"]</a>
         </div>
