html css шаблон для новости

--- a/Website/Views/News/Index.cshtml
+++ b/Website/Views/News/Index.cshtml
@@ -25,7 +25,7 @@
                             </div>
                         </div>
                         
-                        <p class="card-text text-truncate "><a class=" text-muted" href="https://www.google.com">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. </a></p>
+                        <p class="card-text text-truncate "><a class=" text-muted" href="/News/News">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. </a></p>
                        
                         @*<p class="card-text  "><small class="text-muted">24.06.2019</small></p>*@
                     </div>
