--- a/Website/Views/News/Index.cshtml
+++ b/Website/Views/News/Index.cshtml
@@ -17,10 +17,10 @@
                 <div class="col">
                     <div class="card-body">
                         <div class="row">
-                            <div class="col-10">
+                            <div class="col">
                                 <h5 class="card-title">Кто-то начал делать это чудо</h5>
                             </div>
-                            <div class="col-2">
+                            <div class="col-4 "style="text-align: right;">
                                 <p class="card-text  "><small class="text-muted">24.06.2019</small></p>
                             </div>
                         </div>
