--- a/Website/Views/BotForSalesSettings/Settings.cshtml
+++ b/Website/Views/BotForSalesSettings/Settings.cshtml
@@ -230,10 +230,11 @@
                                 Дата запуска:
                             </div>
                             <div class="col-4 text-break">
-                                <strong>18.07.2019 16:53</strong>
+                                <strong>00.00.0000 00:00</strong>
+                                @* <strong>18.07.2019 16:53</strong> *@
                             </div>
                             <div class="col-4">
-                                <button type="button" class="btn btn-info" style="width: 9rem;">Просмотреть</button>
+                                <button type="button" disabled="disabled" class="btn btn-info" style="width: 9rem;">Просмотреть</button>
                             </div>
                         </div>
                     </div>
@@ -256,7 +257,8 @@
                                 Дата редактирования:
                             </div>
                             <div class="col-4 text-break">
-                                <strong>18.07.2019 16:53</strong>
+                                <strong>00.00.0000 00:00</strong>
+                                @* <strong>18.07.2019 16:53</strong> *@
                             </div>
                             <div class="col-4 ">
                                 <a class="btn btn-info" style="width: 9rem;" asp-controller="BotForSalesEditing" asp-action="SalesTreeEditor" asp-route-botId="@ViewData["botId"]">Редактировать</a>
@@ -397,7 +399,7 @@
                                     </div>
                                 </div>
                                 <div class="row" style="font-size: 1rem;">
-                                    Осторожно, сюда лучше не тыкать
+                                    Осторожно, удаление — необратимая операция.
                                 </div>
                             </div>
 
