--- a/Website/Views/Shared/_CookieConsentPartial.cshtml
+++ b/Website/Views/Shared/_CookieConsentPartial.cshtml
@@ -9,10 +9,16 @@
 @if (showBanner)
 {
     <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
-        Use this space to summarize your privacy and cookie use policy. <a asp-area="" asp-controller="Main" asp-action="Privacy">Learn More</a>.
+        
+        Этот сайт использует куки-файлы и другие технологии, чтобы предоставить вам лучший
+        пользовательский опыт.
+
+        @* <a asp-area="" asp-controller="Main" asp-action="Privacy">Learn More</a>.*@
+
         <button type="button" class="accept-policy close" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
-            <span aria-hidden="true">Accept</span>
+            <span aria-hidden="true">Принять</span>
         </button>
+
     </div>
     <script>
         (function () {
