Добавлена ссылка mailto.

--- a/Website/Views/Support/Index.cshtml
+++ b/Website/Views/Support/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="container">
-    <h4 class="text-body">По вопросам вопросов: <a href="mailto:botsconstructor@gmail.com">botsconstructor@gmail.com</a></h4>
+    <h4 class="text-body">Если есть вопросы, можете написать нам на почту: <a href="mailto:botsconstructor@gmail.com">botsconstructor@gmail.com</a></h4>
 </div>
 
 
