--- a/Website/Views/Shared/_LayoutHome.cshtml
+++ b/Website/Views/Shared/_LayoutHome.cshtml
@@ -32,6 +32,7 @@
             <div class="sidebar-heading "><a class="text-decoration-none text-reset" asp-controller="Main" asp-action="Index">@Localizer["Bots constructor"] </a></div>
             <div class="list-group list-group-flush">
                 <a asp-controller="Home" asp-action="MyBots" class="list-group-item list-group-item-action bg-light">Мои боты</a>
+                <a asp-controller="StatusGroups" asp-action="Index" class="list-group-item list-group-item-action bg-light">Группы статусов</a>
                 <a asp-controller="Orders" asp-action="Orders2" class="list-group-item list-group-item-action bg-light">Заказы <span class="badge badge-danger" id="newOrdersSpan"></span></a>
                 <a asp-controller="AccountManagement" asp-action="Index" class="list-group-item list-group-item-action bg-light">Аккаунт</a>
                 <a asp-controller="Support" asp-action="Index" class="list-group-item list-group-item-action bg-light">Поддержка</a>
