как делать новости?

--- a/Website/Views/News/Index.cshtml
+++ b/Website/Views/News/Index.cshtml
@@ -18,14 +18,16 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col">
-                                <h5 class="card-title">Кто-то начал делать это чудо</h5>
+                                <h5 class="card-title">Сообщение о плановом перезапуске</h5>
                             </div>
                             <div class="col-4 "style="text-align: right;">
                                 <p class="card-text  "><small class="text-muted">24.06.2019</small></p>
                             </div>
                         </div>
                         
-                        <p class="card-text text-truncate "><a class=" text-muted" href="/News/News">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer. </a></p>
+                        <p class="card-text text-truncate "><a class=" text-muted" href="/News/News">
+                            В связи с обновлением функций системы. Завтра все боты будут перезагружены в период с 17:30 до 17:35 (MSK).  
+                        </a></p>
                        
                         @*<p class="card-text  "><small class="text-muted">24.06.2019</small></p>*@
                     </div>
