--- a/Website/Views/Shared/_Layout.cshtml
+++ b/Website/Views/Shared/_Layout.cshtml
@@ -27,10 +27,10 @@
 
         <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm container">
             <h5 class="my-0 mr-md-auto font-weight-normal"> <a class="text-reset" asp-controller="Main" asp-action="Index">@Localizer["Bots constructor"]</a></h5>
-            <nav class="my-2 my-md-0 mr-md-3">
-                @* <a class="p-2 text-dark" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Home"]</a> *@
-                <a class="p-2 text-dark" asp-area="" asp-controller="News" asp-action="All">@Localizer["News"]</a>
-            </nav>
+            @* <nav class="my-2 my-md-0 mr-md-3"> *@
+            @*     $1$ <a class="p-2 text-dark" asp-area="" asp-controller="Home" asp-action="Index">@Localizer["Home"]</a> #1# *@
+            @*     <a class="p-2 text-dark" asp-area="" asp-controller="News" asp-action="All">@Localizer["News"]</a> *@
+            @* </nav> *@
             
             @if (HostingEnvironment.IsDevelopment())
             {
